# magictcg-tracker

./: LICENSE  README.md  flake.nix  rust-toolchain.toml
rust/: Cargo.toml
rust/src/: main.rs
