[package]
name = "magictcg-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
axum = "0.7.4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ] }
clap = { version = "4.4.18", features = ["derive"] }
